--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,14 @@ des = "0.8.1"
 aes = "0.8.2"
 dbl = "0.3.2"
 getrandom = "0.2.9"
+rsa = "0.9.2"
+cms = "0.2.1"
+openssl-sys = "0.9"
+openssl = { version = "0.10"}
+
+der = { version = "0.7.6", features=["derive"]}
+sha2 = "0.10.7"
+pem = "2"
 
 [dev-dependencies]
 hex-literal = "0.3"
