Updates to include ECC

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,12 +19,14 @@ dbl = "0.3.2"
 getrandom = "0.2.9"
 rsa = "0.9.2"
 cms = "0.2.1"
-openssl-sys = "0.9"
-openssl = { version = "0.10"}
+#openssl-sys = "0.9"
+openssl = { version = "=0.10.56", features=["vendored"]}
 
 der = { version = "0.7.6", features=["derive"]}
 sha2 = "0.10.7"
 pem = "2"
+ecdh = "0.0.12"
+hex-literal = "0.3"
 
 [dev-dependencies]
-hex-literal = "0.3"
+
